<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="WhatsNewDialog">New in Version 1.8:\n - Allow move to SD card\n - Improved Data Export Function \n</string>
    <string name="app_name">DataHabit</string>
    <string name="no_monitors">No trackers. Please add one using the buttons below</string>
    <string name="no_history">No data.</string>
    <string name="createTracker">Create New Tracker</string>
    <string name="TrackerName">Tracker Name</string>
    <string name="enter_name">Click here to type name</string>
    <string name="choice">Your Choice</string>
    <string name="reminder_spinner_label">Choose Your Data Input Weapon</string>
    <string name="star_rating">Star Rating</string>
    <string name="slider_bar">Slider Bar</string>
    <string name="numeric_keyboard">Type Number</string>
    <string name="yes_no_choice">Yes/No Choice</string>
    <string name="push_button">Push Button</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="cancel">Cancel</string>
    <string name="Comments">Comments</string>
    <string name="next_button">Next</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_logger_text">Press to Record Timestamp</string>
    <string name="star_description">Use the star rating if you want to record the quality of something. It\'s great for recording mood</string>
    <string name="slider_description">Use the slider like the star rating, but when you need more granularity.</string>
    <string name="keyboard_description">Use the keyboard when you have an exact number that you want to record</string>
    <string name="yesno_description">Yes/No will let you record that answer. It\'s great for recording whether or not something happened</string>
    <string name="pushbutton_description">Use the this to record events - click Save when something happens. It\'s great for tracking habits like smoking.</string>
    <string name="save">Save</string>
    <string name="history">All data is shown.</string>
    <string name="open_tracker">Add Data to Tracker</string>
    <string name="edit_tracker">Edit Tracker Settings</string>
    <string name="tracker_history">View All Data Entered</string>
    <string name="delete_tracker">Delete Tracker and Data</string>
    <string name="no_need_button">Press Save button below to record your event</string>
    <string name="reminder_enabled">Reminder Enabled</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="reminder_freq">Reminder Frequency</string>
    <string name="every">Every</string>
    <string name="trackerSettings">Tracker Settings</string>
    <string name="eMailSubject">DataHabit CSV Data Extract</string>
    <string name="eMailText">Generated by DataHabit Android Application. http://datahabit.com</string>
    <string name="edit_data">Edit Data Point</string>
    <string name="delete_data">Delete Data Point</string>
    <string name="new_tracker">New Tracker</string>
    <string name="activity_data">Enter Data</string>
    <string name="activity_export">Export Data</string>
    <string name="activity_history">View Data</string>
    <string name="activity_help">About The App</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_trackers">My Trackers</string>
    <string name="press_hold">Press and Hold Tracker to View Menu</string>
    <string name="support">DataHabit is committed to providing exceptional customer support. For any issues please contact us at either of the links below.</string>
    <string name="url">http://datahabit.com</string>
    <string name="email">info@datahabit.com</string>
    <string name="pleaseSave">Please save the tracker before trying to access this function</string>
    <string name="select_tracker">Select Tracker</string>
    <string name="settings">DataHabit Settings</string>
    <string name="notifications_sounds">Enable Notification Sound</string>
    <string name="notification_vibrate">Enable Notification Vibration</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_title">Click to Set Title</string>
    <string name="set_reminders">Set Number of Reminders</string>
    <string name="set_cycle">Pick a Reminder Cycle</string>
    <string name="OK">OK</string>
    <string name="email_data">Export Data</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="delete_data_dialog">Are you sure you want to delete this item?</string>
    <string name="delete_tracker_dialog">Are you sure you want to delete this tracker?</string>
    <string name="data_saved">Data Saved</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="timer_stopwatch">Timer/Stopwatch</string>
    <string name="timer_description">Use this control if you want to record a time value or use the stopwatch feature</string>
    <string name="start_timer">Start Timer</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="custom_sound">Set Notification Sound</string>
    <string name="Chart">Show Chart</string>
    <string name="value">Value</string>
    <string name="LastUpdated">Last Updated</string>
    <string name="LastUpdatedDate">Last Updated Date</string>
    <string name="LastUpdatedTime">Last Updated Time</string>
    <string name="Statistics">Statistics</string>
    <string name="Last7Days">Last 7 Days</string>
    <string name="Last30Days">Last 30 Days</string>
    <string name="AllTime">All Time</string>
    <string name="NumDataPoints">Number of Data Points</string>
    <string name="AvgDataPoints">Average of Data Points</string>
    <string name="SumDataPoints">Total of Data Points</string>
    <string name="DateTimeFormat">Date Time Format</string>
    <string name="WhatsNew">New in Datahabit</string>
    <string name="NotificationSettings">Notification Settings</string>
    <string name="NotificationComment">Additional formats are available through the settings page on your device</string>
    <string name="SeparateDateTime">Separate Date and Time Fields</string>
    <string name="IncludeLastUpdateTime">Include Last Update Time</string>
    <string name="ExportOptions">Export Options</string>
    <string name="SelectAll">Select All</string>
    <string name="SelectNone">Select None</string>
    <string name="FileFormatOptions">File Format Options</string>
    <string name="SelectTrackersToExport">Select Trackers to Export</string>
    <string name="NoTrackersSelected">No Trackers Selected</string>
</resources>
