<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <LinearLayout style="@style/TitleBar"
        android:id="@+id/title_layout">
        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/app_name" />
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

        <TextView
            android:id="@+id/support_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textAppearance="?android:attr/textAppearanceLarge" android:padding="10sp"/>
        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url" android:padding="10sp" android:clickable="true" android:autoLink="web"/>

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" android:autoLink="email" android:clickable="true" android:padding="10sp"/>

    </LinearLayout>    

</LinearLayout>