<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    	<RatingBar
	        android:id="@+id/ratingBar1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:visibility="gone" />
	    <SeekBar
	        android:id="@+id/seekBar1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone" />
	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:visibility="gone" />
	    <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone" >
	        <RadioButton
	            android:id="@+id/radio0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/no" />
	        <RadioButton
	            android:id="@+id/radio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/yes" />
	    </RadioGroup>
	    <TextView
	        android:id="@+id/btnLogger"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/no_need_button"
	        android:visibility="gone" />
	    <RelativeLayout android:id="@+id/rlTimer"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:visibility="gone">
		    <EditText
		        android:id="@+id/etHours"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_alignParentTop="true"
		        android:inputType="number"
		        android:text="00"
		        android:textSize="25sp" >
		    </EditText>
		   <EditText
		        android:id="@+id/etMins"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentTop="true"
		        android:layout_toRightOf="@+id/etHours"
		        android:inputType="number"
		        android:text="00"
		        android:textSize="25sp" />
		    <EditText
		        android:id="@+id/etSecs"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@+id/etMins"
		        android:inputType="numberDecimal"
		        android:text="00.0"
		        android:textSize="25sp" />
		    <TextView
		        android:id="@+id/tvHours"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentLeft="true"
		        android:layout_below="@+id/etHours"
		        android:text="@string/hours" />
		    <TextView
		        android:id="@+id/tvMins"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
				android:layout_alignRight="@+id/etMins"
		        android:layout_below="@+id/etMins"
		        android:text="@string/minutes" />
		    <TextView
		        android:id="@+id/tvSecs"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/etSecs"
		        android:layout_alignRight="@+id/etSecs"
		        android:text="@string/seconds" />
		    <TextView
		        android:id="@+id/tvTimerControl"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignBottom="@+id/etSecs"
		        android:layout_alignParentRight="true"
		        android:clickable="true"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
	</RelativeLayout>
</LinearLayout>