<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parent_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout style="@style/TitleBar"
        android:id="@+id/title_layout">
        <ImageView style="@style/TitleBarSeparator" />

        <TextView
            style="@style/TitleBarText"
            android:text="@string/select_tracker" />
    </LinearLayout>
    <LinearLayout android:id="@+id/listLayout"
        android:layout_below="@+id/title_layout"
    	android:layout_above="@+id/bucket_layout"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content">
	    <ListView android:id="@+id/android:list"
	    	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	  	<TextView android:id="@id/android:empty"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/no_monitors" android:paddingBottom="20sp" android:paddingRight="5sp" android:paddingTop="20sp"/>
    </LinearLayout>
    <RelativeLayout style="@style/BucketBar"
	    android:id="@+id/bucket_layout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true">

	    <TextView
	        android:id="@+id/tvNewMonitor"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:text="Large Text"
	        android:textAppearance="?android:attr/textAppearanceLarge" 
	        android:padding="7sp"/>

	    <TextView
	        android:id="@+id/tvExport"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:padding="7sp"
	        android:text="@string/press_hold"
	        android:textAppearance="?android:attr/textAppearanceSmall" 
	        android:layout_toLeftOf="@+id/tvNewMonitor"/>

	</RelativeLayout>
</RelativeLayout>